# slide-linker

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  slide-linker-spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: convert.rs  export.rs  export_pdf.rs  image.rs  mod.rs  project.rs  settings.rs
src-tauri/src/templates/: export.html
src/api/: tauri-commands.ts
src/components/: EditorLayout.tsx  LinkIntegrityPanel.tsx  LoadingOverlay.tsx  RecentProjectList.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/components/editor/: EditorCanvas.tsx  HotspotLayer.tsx  HotspotOverlay.tsx  SlideWrapper.tsx  TextOverlayItem.tsx  TextOverlayLayer.tsx
src/components/graph/: GraphContextMenu.tsx  GraphSidePanel.tsx  NavigationGraph.tsx  SlideNode.tsx
src/components/preview/: DotNavigation.tsx  GraphLinkChips.tsx  MainSlideScroller.tsx  OverlayStack.tsx  PreviewMode.tsx  PreviewSlide.tsx
src/components/settings/: GraphLinkList.tsx  HotspotDetail.tsx  HotspotList.tsx  HotspotSettings.tsx  HotspotStyleEditor.tsx  LinkTypeSelector.tsx  SlideTargetPicker.tsx  TextOverlayDetail.tsx  TextOverlayList.tsx  UrlInput.tsx
src/components/slide-panel/: SlideItem.tsx  (+3 more)
src/hooks/: useHotspotClipboard.ts  useHotspotDrawing.ts  useProjectActions.ts  useTextOverlayDrawing.ts  useUndoRedo.ts
src/store/: index.ts
src/styles/: global.css  theme.ts
src/types/: editor.ts  index.ts  project.ts
src/utils/: build-graph.ts  link-integrity.ts  merge-project.ts
(+7 files in other folders)
