[package]
name = "slide-linker"
version = "0.1.0"
description = "Non-linear presentation HTML generator"
authors = ["you"]
edition = "2021"

[lib]
name = "slide_linker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs", "rt"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pdfium-render = "0.8"
printpdf = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
